--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Lee Bushnell",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "config": "^4.1.1",
     "express": "^5.1.0",
