--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Lee Bushnell",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "config": "^4.1.1",
@@ -20,6 +21,7 @@
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "react-redux": "^9.2.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
