--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "react-redux": "^9.2.0",
+    "react-spinners": "^0.17.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
