--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "config": "^4.1.1",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
     "gravatar": "^1.8.2",
